--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
+    <link rel="shortcut icon" type="icon" href="/graphics/icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
- <body>
+  <body>
     <div class="container">
       <header class="header" id="header"> 
         <div class="logo">
@@ -36,7 +36,7 @@
             <div class="hero_header">
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
-            <p class="hero_body"><span class="my-name">Andrei</span> is a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <p class="hero_body">My name is <span class="my-name">Andrei</span> and I am a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
           </div>
           <div class="hero_right">
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
@@ -61,6 +61,23 @@
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
+                <a href="/bespoke.html"><img src="/graphics/bespoke-mockup.jpg" alt="" class="work_image" id="work_image-3"></a>
+              </div>
+              <div class="work-wrapper_right" id="work-wrapper_right-3">
+                <h2 class="work-wrapper_header">
+                  Bespoke Design
+                </h2>
+                   <h3 class="subtitle">
+                  research, ideation, design and prototyping
+                </h3>
+                <p class="work-wrapper_body" id="work_body-3">
+                  Conceptual project for university, in which we designed an application that should fulfill the needs of one user. The scope of this project was to learn how to empathize and build an experience that is crafted according to the user’s needs, context, personality and lifestyle.  
+                </p>
+                <a href="/bespoke.html"><button class="red">VIEW PROJECT</button></a>
+              </div>
+            </div>
+            <div class="work-wrapper">
+              <div class="work-wrapper_left">
                 <a href="/maynooth.html"><img src="/graphics/Mockup2.jpg" alt="" class="work_image" id="work_image-1"></a>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-1">
@@ -71,7 +88,7 @@
                   design and development
                 </h3>
                 <p class="work-wrapper_body" id="work_body-1">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  A personal project I have worked on while teaching myself design and development. It is a fictive furniture store built with a nordic feel, and the target audience would be middle class people who are interested in purchasing custom quality furniture pieces.
                 </p>
                 <a href="/maynooth.html"><button class="blue">VIEW PROJECT</button></a>
               </div>
@@ -82,13 +99,13 @@
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-2">
                 <h2 class="work-wrapper_header">
-                  XD Assignment
+                 Interface Yourself
                 </h2>
                    <h3 class="subtitle">
-                  design and prototype
+                  design and prototyping
                 </h3>
                 <p class="work-wrapper_body" id="work_body-2">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  This is an application I built for university. The scope of this application was to introduce myself to my colleagues, and to give them a clear understanding of my personality, hobbies and vision. I used a more unconventional and artistic approach in order to practice my skills in design and prototyping.
                 </p>
                 <a href="/xdassignment.html"><button class="red">VIEW PROJECT</button></a>
               </div>
@@ -99,31 +116,15 @@
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-4">
                 <h2 class="work-wrapper_header">
-                  Processing Coding
+                  Processing Generative Art
                 </h2>
                 <h3 class="subtitle">
                   programming
                 </h3>
                 <p class="work-wrapper_body" id="work_body-4">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
+                  In one of our university courses, we were thought how to program computers by using creative coding as a method of teaching. These generative art pieces are the result of my work after teaching myself processing for just a few days.
                 </p>
                 <a href="/processing.html"><button class="blue">VIEW PROJECT</button></a>
-              </div>
-            </div>
-            <div class="work-wrapper">
-              <div class="work-wrapper_left">
-                <img src="/graphics/bespoke-placeholder.jpg" alt="" class="work_image" id="work_image-3">
-              </div>
-              <div class="work-wrapper_right" id="work-wrapper_right-3">
-                <h2 class="work-wrapper_header">
-                  Bespoke Design
-                </h2>
-                   <h3 class="subtitle">
-                  research, ideate and design
-                </h3>
-                <p class="work-wrapper_body" id="work_body-3">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aliquid fugiat error voluptatibus, recusandae distinctio voluptate delectus fugit explicabo nisi vel eligendi nam iure, reprehenderit dolorem harum ipsa eos tempora.
-                </p>
               </div>
             </div>
           </div>
@@ -132,8 +133,8 @@
             <h1 id="about-header">About</h1>
             <div class="about-wrapper">
               <div class="about_left">
-                <p class="about_left-body"><span>Andrei is currently a student at The Hague University of Applied Sciences, studying user experience design, and he’s interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
-              Taking inspiration from the Bauhaus school and international typography, Andrei has a modern approach to design, aiming for simplicity and functionality.</span><span>He is proficient in wireframing, prototyping, coding, colour theory, and design principles, and is currently developing his skills in user research, react js, and motion graphics.
+                <p class="about_left-body"><span>Currently I am a student at The Hague University of Applied Sciences, studying user experience design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
+              Taking inspiration from the Bauhaus school and international typography, I have a modern approach to design, aiming for simplicity and functionality.</span><span>I consider myself proficient in wireframing, prototyping, coding, colour theory, and design principles, and I am working on developing my skills in user research and motion graphics.
                 </p>
                 <a href="about.html" class="about_left-link">
                   <h2>learn more</h2>
@@ -142,7 +143,7 @@
             
               <div class="about_right">
                 <div class="about_right-image">
-                  <img src="/graphics/hortus-botanicus.jpg">
+                  <img src="/graphics/me.jpg">
                 </div>
             </div>
         </section>
