--- a/maynooth.html
+++ b/maynooth.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
+    <link rel="shortcut icon" type="icon" href="/graphics/icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
   <body>
@@ -52,7 +52,8 @@
                       <h1 class="project-title">Maynooth Furniture</h1>
                       <h2>my role: design and development</h2>
                       <h2>project type: personal</h2>
-                      <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
+                      <h3>(work in progress)</h3>
+                      <p class="project_body">A personal project I have worked on while teaching myself design and development. It is a fictive furniture store built with a nordic feel, and the target audience would be middle class people who are interested in purchasing custom quality furniture pieces.</p>
                       <a href="https://amazing-curie-5c87a2.netlify.app/index.html" target="_blank">
                         <h2 class="site-link">view website
                         </h2>
@@ -60,30 +61,45 @@
                     </div>
                 </div>
                 <div class="project_wrapper">
-                    <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
-                    <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                   <img src="/graphics/Mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                   <img src="/graphics/Mockup laptop.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
+                   <div class="moodboard_wrapper">
+                      <img src="/graphics/moodboard.png" alt="moodboard maynooth" class="moodboard-maynooth">
+                      <div class="moodboard_text">
+                        <h1>moodboard:</h1>
+                        <p>Before I started designing this project, I did a quick desk research on other stores to see what their traffic is and whether their traffic comes from mobile devices or desktop devices. After finding out, surprisingly, that the traffic is split up in almost equal parts, 60 percent for the web, and 40 percent for mobile, I decided I need to focus on both the mobile and desktop versions of the interface.</p>
+                        <p>After researching the market, I started generating ideas for this project. In order to be able to visualise my ideas better, I created a moodboard with similar stores that I found inspirational.</p><p>The moodboard is one of my go-to methods of ideation, and it helps me to bring my ideas to life. I search components and colours that are similar to the one I have in mind and I get a better understanding of how my future design should look like. The moodboard supports me through the whole design process, and in case I feel stuck, I can come back to it and find my inspiration.</p>
+                        <p>Finally, I designed the high-fidelity prototype, and after that I developed the website using html and css.</p>
+                      </div>
+                    </div>
+                    <div class="style-guide_wrapper">
+                      <div class="style-guide_left">
+                        <h1>styleguide:</h1>
+                        <p>After creating the moodboard, I also created a style-guide for the design. I went with some really soft colours that speak simplicity, elegance and luxury. For the font choices, I went with a combination that you can never go wrong with: two minimalistic, easy to read sans serifs. </p>
+                      </div>
+                      <div class="style-guide_right">
+                        <img src="/graphics/style-guide.png" alt="style guide image">
+                      </div>
+                    </div>
                     <div class="mindmap-wrapper">
                       <div class="mind-map_right">
-                        <h2>Mindmap</h2>
-                        <p class="mind-map_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim repudiandae aut possimus deserunt, velit tempora. Voluptatibus, dolore repellat quia totam unde itaque dolor sequi pariatur odio cumque similique illo</p>
+                        <h2>mindmap:</h2>
+                        <p class="mind-map_body">After building the moodboard and the wireframes, I worked on imagining the information architecture of the website, and I visualised this data by using a mindmap that illustrated every hypothetical flow the user could take while navigating through the website.</p>
                       </div>
                       <div class="mind-map_left">
                         <img src="/graphics/mindmap-maynooth.jpeg" alt="mock-up maynooth furniture" class="maynooth-mindmap">
                       </div>
                     </div>
-                    <div class="mindmap-wrapper">
-                      <div class="moodboard_wrapper">
-                        <img src="/graphics/moodboard.png" alt="moodboard maynooth" class="moodboard-maynooth">
-                        <div class="moodboard_text">
-                          <h1>moodboard</h1>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quibusdam minus incidunt quaerat asperiores dolor tempora suscipit deleniti at deserunt. Eum quod fugiat odit dolore blanditiis veniam laborum error ullam.
-                          Repellat laborum tenetur assumenda temporibus, deleniti sequi praesentium. A cumque odit voluptatum hic, repellendus, doloribus esse ea alias tempore aut id sit beatae aspernatur asperiores illum quo. Fugiat, officia odit?</p>
-                        </div>
-                      </div>
+                    <div class="project_wrapper">
+                      <h2 style="margin-bottom: 0.25em;">final concept:</h2>
+                      <img src="/graphics/our-stores.png" alt="screen grab of the website">
+                      <img src="/graphics/category-page.png" alt="screen grab of the website">
+                      <img src="/graphics/product-page.png" alt="screen grab of the website">
                     </div>
                 </div>
                 <div class="project-select_wrapper">
-                  <a href="#" class="project-select_link">
+                  <a href="bespoke.html" class="project-select_link">
+                        <h2 class="project-select">previous project</h2>
                   </a>
                   <a href="xdassignment.html" class="project-select_link">
                     <h2 class="project-select">next project</h2>
@@ -114,6 +130,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
