--- a/processing.html
+++ b/processing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
+    <link rel="shortcut icon" type="icon" href="/graphics/icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
   <body>
@@ -49,29 +49,45 @@
             <div class="container">
                 <div class="project_text">
                     <div class="project-left">
-                      <h1 class="project-title">processing generative art</h1>
+                      <h1 class="project-title">Processing Generative Art</h1>
                       <h2>my role: programming</h2>
-                      <h2>project type: personal</h2>
-                      <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
-                        <a href="#" target="_blank">
-                            <h2 class="site-link">github repo
-                            </h2>
-                      </a>
+                      <h2>project type: university assignment</h2>
+                      <p class="project_body">In one of our university courses, we were thought how to program computers by using creative coding as a method of teaching. These generative art pieces are the result of my work after teaching myself processing for just a few days.</p>
                     </div>
                 </div>
                 <div class="project_wrapper">
                     <div class="visuals-images_wrapper">
-                        <img src="/graphics/1.png" alt="visuals-1">
-                        <img src="/graphics/2.png" alt="visuals-2">
+                        <img src="/graphics/1.png" alt="visuals-1" style="margin-bottom: 1em;">
+                        <div class="visuals-text_wrapper">
+                          <h2>moire pattern:</h2>
+                          <p>For the first assignment, I coded a moire pattern by using just two simple for loops. The lines loop starting from each corner of the screen and meet up at the x and y position of the cursor.</p>
+                          <p>The number of lines can be incremented as much as the user wishes, and with the number of lines increasing, the illusion becomes less obvious.</p>                        </div>
+                        <img src="/graphics/2.png" alt="visuals-2" style="margin-bottom: 1em;">
+                          <div class="visuals-text_wrapper">
+                            <h2>what I've learned:</h2>
+                            <p>Although this code is relatively simple, I found that generative art brings out a lot of creative potential and it was good practice to practice my programming skills in this creative manner.</p>
+                          </div>
                         <img src="/graphics/3.png" alt="visuals-3">
                     </div>
                     <div class="visuals_wrapper">
-                        <video src="/video/visuals.mp4" autoplay muted loop class="visuals-video"></video>
-                        <div class="visuals-text_wrapper">
-                            <h2>coding</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta earum placeat molestiae laudantium consectetur voluptates harum culpa facilis porro debitis, sed nulla laborum assumenda praesentium. Voluptatum maiores explicabo quibusdam totam.
-                            Ipsa itaque incidunt excepturi repellendus voluptate recusandae officiis nobis saepe nemo. Quo dicta itaque, natus numquam consequatur temporibus! Impedit dolore voluptatum quasi optio unde tempore tenetur facere harum nisi suscipit.</p>
-                        </div>
+                      <video src="/video/visuals.mp4" autoplay muted loop playsinline class ="visuals-video"></video>
+                      <div class="visuals-text_wrapper">
+                        <h2>generative visuals:</h2>
+                        <p>For my second assignment, I have decided to create something more interesting using music, so I built some visuals that could be projected on the walls of an electronic music event, for example.</p>
+                        <p>This idea came from my past experience in event planning, where I have learned many things about design, managment, and organisation.</p>
+                        <p>I used geometry to create for loops with arcs, and the movement is created by incrementing the sw variable which sets the stroke width of the arcs. This animation uses two mathematical functions to generate the arcs in such a pattern.</p>
+                        <p>During this project, I have learned many things about programming, more specifically how to debug my code and how to properly search online for solutions to coding problems.</p>
+                      </div>
+                    </div>
+                    <div class="visuals_wrapper">
+                      <video src="/video/game.mp4" autoplay muted loop playsinline class ="visuals-video"></video>
+                       <div class="visuals-text_wrapper">
+                        <h2>when aliens attack:</h2>
+                        <p>As my final project, I went with building a simple game that is inspired by the space invaders arcade nostalgia.</p>
+                        <p>First, I created some variables to which I assigned the x position of the player, the y and x position of the bullet, and the x and y position of the enemy. I also have an integer variable which is set to 0, and every time the bullet hits the enemy, it increments by 1.</p>
+                        <p>When building this game, I have faced multiple challanges, and the hardest part for me was to fix the collision points between the different elements of the game.</p>
+                        <p>I consider that by building this game I have gained valuable experience in implementing logic through my code, and I learned even more about debugging my code.</p>
+                      </div>
                     </div>
                 <div class="project-select_wrapper">
                   <a href="xdassignment.html" class="project-select_link">
@@ -105,6 +121,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
