--- a/xdassignment.html
+++ b/xdassignment.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="icon" href="/graphics/small-icon.ico" />
+    <link rel="shortcut icon" type="icon" href="/graphics/icon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
   <body>
@@ -49,10 +49,10 @@
             <div class="container">
                 <div class="project_text">
                     <div class="project-left">
-                      <h1 class="project-title">Adobe XD Assignment</h1>
+                      <h1 class="project-title">Interface Yourself</h1>
                       <h2>my role: design and prototype</h2>
-                      <h2>project type: assignment</h2>
-                      <p class="project_body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus obcaecati porro doloribus dolores inventore a iusto facere corrupti dolor, libero, temporibus eligendi itaque consectetur! Facilis sapiente natus fuga voluptates non</p>
+                      <h2>project type: university assignment</h2>
+                      <p class="project_body"> This is an application I built for university. The scope of this application was to introduce myself to my colleagues, and to give them a clear understanding of my personality, hobbies and vision. I used a more unconventional and artistic approach in order to practice my skills in design and prototyping.</p>
                       <a href="https://xd.adobe.com/view/a23a448c-8c27-4ea2-b0be-e46346171d84-f769/" target="_blank">
                         <h2 class="site-link">view prototype
                         </h2>
@@ -62,19 +62,30 @@
                 <div class="project_wrapper">
                     <img src="/graphics/xd-app-mockup.jpg" alt="mock-up maynooth furniture" class="maynooth-mockup">
                 </div>
+                <div class="xdassignment_wrapper">
+                  <h2>aesthetics:</h2>
+                   <p>When building this app I focused mostly on the aesthetic choices, and after browsing the web for inspiration, I decided to go forward with a nostalgic user interface vibe, with a modern hipster touch.</p>
+                   <p> Althought now I am an avid Mac user, Windows 98 and Windows XP are the operating systems I grew up with and this vaporware aesthetic is what really sparked my interest in user interface design as a child.</p>
+                   <p>When designing this app, I gave it a slight brutalist twist by mixing together more fonts that don't really go together perfectly, thus creating a pleasant discordance in the eye of the users. </p>               
+                </div>
                 <div class="video_wrapper">
-                  <video class="video" src="/video/animations.mp4" autoplay muted loop playsinline></video>
+                  <video class="video" src="/video/prototype-app.mp4" autoplay muted loop playsinline></video>
                 </div>
                 <div class="xdassignment_wrapper">
-                  <h2>how it's done</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam id architecto veritatis quam, nisi perferendis voluptates qui minus quasi quos vero hic eum, tenetur sequi quis. Voluptas facere obcaecati aliquam.
-                  Nihil hic illo quod, cum odit minus. Ex nulla natus praesentium, commodi nostrum eius ea quo, laborum perspiciatis, voluptatum consequuntur dicta quod tenetur repellendus quas in maxime animi cumque harum.</p>
+                  <h2>micro-interactions:</h2>
+                   <p>A part of the app in which I put extra effort was the interactivity. I found this to be a challenging topic, given the technological constraints of prototyping tools.</p>
+                   <p>Many of the micro-interactions, like the art creator and the music player, took me  hours of experimentation and tweaking.</p>
+                   <p>In the end, by designing this app, I have gained valuable experience in building mobile prototypes and I got a better understanding of mobile UI layouts and digital prototyping tools.</p>
                 </div>
+                <div class="video_wrapper">
+                  <video class="video" src="/video/prototype-app-2.mp4" autoplay muted loop playsinline></video>
+                </div>
+                <img src="/graphics/adobe-xd-screens.png" alt="screenshots of the xd application" class="xd-screens">
                 <div class="project-select_wrapper">
                   <a href="maynooth.html" class="project-select_link">
                     <h2 class="project-select">previous project</h2>
                   </a>
-                  <a href="#" class="project-select_link">
+                  <a href="processing.html" class="project-select_link">
                     <h2 class="project-select">next project</h2>
                   </a>
                 </div>
@@ -103,7 +114,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
-    <script src="script2.js"></script>
-    <!-- <script src="snow.js"></script> -->
+    <script src="script.js"></script>
   </body>
 </html>
