--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
           </div>
         </section>
         <section class="work">
-          <h1 id="work-header">Work</h1>
+          <div class="work-header">
+            <h1>Work</h1>
+            <img src="/graphics/yellow-triangle.png" alt="yellow-triangle" class="yellow-triangle">
+          </div>
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
@@ -130,7 +133,10 @@
           </div>
           </section>
           <section class="about">
-            <h1 id="about-header">About</h1>
+            <div class="about-header">
+              <h1>About</h1>
+              <img src="/graphics/red-square.png" alt="red square" class="red-square">
+            </div>
             <div class="about-wrapper">
               <div class="about_left">
                 <p class="about_left-body"><span>Currently I am a student at The Hague University of Applied Sciences, studying user experience design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
