--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </section>
         <section class="work">
-          <div class="work-header">
+          <div id="work-header">
             <h1>Work</h1>
             <img src="/graphics/yellow-triangle.png" alt="yellow-triangle" class="yellow-triangle">
           </div>
@@ -133,7 +133,7 @@
           </div>
           </section>
           <section class="about">
-            <div class="about-header">
+            <div id="about-header">
               <h1>About</h1>
               <img src="/graphics/red-square.png" alt="red square" class="red-square">
             </div>
