--- a/about.html
+++ b/about.html
@@ -47,47 +47,42 @@
       <main>
         <section class="about">
             <div class="container">
-                <div class="aboutpage_wrapper">
-                    <div class="aboutpage_left">
-                        <h2>how it started</h2>
-                        <p>
-                            <span>I was born and grew up in Romania in a small mountain town called <span class="busteni">Busteni</span>, which literally translates to tree logs. As soon as I finished high-school, I moved to Bucharest, the capital city of Romania, to pursue higher education. This is the place where I found my passion for design.</span>
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic in error nihil provident autem placeat recusandae, neque amet officia esse mollitia assumenda sed temporibus. Minima, esse laudantium! Explicabo, enim nulla.
-                            Autem, necessitatibus molestias expedita amet iusto tempore officiis et, est nisi architecto accusantium aut quibusdam. Possimus, sapiente quis. Eveniet, vero beatae similique nam facilis vitae? Tempore cumque assumenda itaque temporibus. </span>
-                    </div>
-                    <div class="aboutpage_right">
-                        <img src="/graphics/me-3.jpg" alt="picture of myself" class="profile-pic">
-                        <img src="/graphics/red-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
-                    </div>
+              <div class="aboutpage_wrapper">
+                <div class="aboutpage_left">
+                  <div class="aboutheader_wrapper">
+                    <h2>how it started:</h2>
+                    <img src="/graphics/red-square.png" alt="red square shape" class="about-red-square">
+                  </div>
+                  <p>
+                    <span>I was born and grew up in Romania in a small mountain town called <span class="busteni">Busteni</span>, and I always had an affinity for design, technology, and people. </span>
+                    <span>After finishing school, I moved to <span class="bucharest">Bucharest</span>, the capital city of Romania, where I took different freelance jobs in the creative field. </span>
+                    <span>Here is where I understood my intrinsic motivation to improve people's lives by building engaging and meaningful experiences. </span>
+                    <span>Soon I realized that all the skills and knowledge I have gained so far could be leveraged and I decided to move to the Netherlands to further strengthen my potential and pursue my passion for experience design.</span>
+                  </p>
+                  <div class="about-headerwrapper">
+                    <h2 class="about-header-2"style="margin-top:2em; margin-bottom: 0.25em;" >how it's going:</h2>
+                    <img src="/graphics/blue-triangle.png" alt="blue triangle shape" class="about-blue-triangle">
+                  </div>
+                  <p>
+                    <span>Currently I am living in Rotterdam, the Netherlands, and I am studying User Experience Design as a Bachelor of Science at <span class="university">The Hague University.</span></span>
+                    <span>I am learning new and exciting things about design every day and I am looking for opportunities where I could practice my problem-solving skills, by helping you bridge the gap between business goals and human needs.</span>
+                  </p>
+                  <a a href="mailto:andrei.avm00@gmail.com" target="_blank">
+                    <h2 class="get-in-touch">get in touch</h2>
+                  </a>
+                 </div>
+                <div class="aboutpage_right">
+                  <img src="/graphics/me-3.jpg" alt="picture of myself" class="profile-pic">
+                  <img src="/graphics/red-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
                 </div>
-                <div class="aboutpage_wrapper">
-                    <div class="aboutpage_left">
-                        <h2>how it's going</h2>
-                        <p>
-                            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit quod, architecto qui hic debitis doloremque aliquam perferendis cupiditate necessitatibus natus dicta dignissimos voluptatem deserunt, autem ullam veritatis dolorem facilis quisquam.
-                            Maxime porro distinctio voluptatum sequi autem nobis eum voluptatem corporis debitis, at atque laboriosam perferendis et esse ex in ullam exercitationem! Obcaecati corrupti incidunt cum porro, necessitatibus labore voluptate aperiam?</span>
-                        </p>
-                    </div>
-                    <div class="aboutpage_right">
-                    </div>
-                </div>
-                <div class="aboutpage_wrapper">
-                    <div class="aboutpage_left">
-                        <h2>random facts</h2>
-                        <p>i like this</p>
-                        <p>i like that</p>
-                        <p>i also like that</p>
-                        <p>i hate bespoke</p>
-                        <p>etc</p>
-                    </div>
-                </div>
+              </div>
             </div>
         </section>
         </main>
         </div>
         </container>
         </main>
-      <footer class="footer">
+      <footer class="footer footer-about">
         <div class="container footer_wrapper">
           <div class="footer_left">
             <p>&copy;designed and built by andrei avram</p>
