--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
             <p class="hero_body">My name is <span class="my-name">Andrei</span> and I am a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <a a href="mailto:andrei.avm00@gmail.com" target="_blank">
+                <h2 class="hero-cta">get in touch</h2>
+              </a>
           </div>
           <div class="hero_right">
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
