--- a/processing.html
+++ b/processing.html
@@ -74,7 +74,7 @@
                       <div class="visuals-text_wrapper">
                         <h2>generative visuals:</h2>
                         <p>For my second assignment, I have decided to create something more interesting using music, so I built some visuals that could be projected on the walls of an electronic music event, for example.</p>
-                        <p>This idea came from my past experience in event planning, where I have learned many things about design, managment, and organisation.</p>
+                        <p>This idea came from my past experience in event planning, where I have learned many things about design, management, and organisation.</p>
                         <p>I used geometry to create for loops with arcs, and the movement is created by incrementing the sw variable which sets the stroke width of the arcs. This animation uses two mathematical functions to generate the arcs in such a pattern.</p>
                         <p>During this project, I have learned many things about programming, more specifically how to debug my code and how to properly search online for solutions to coding problems.</p>
                       </div>
