--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             <div class="about-wrapper">
               <div class="about_left">
-                <p class="about_left-body"><span>Currently I am a student at The Hague University of Applied Sciences, studying user experience design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
+                <p class="about_left-body"><span>Currently I am a student at The Hague University of Applied Sciences, studying User Experience Design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
               Taking inspiration from the Bauhaus school and international typography, I have a modern approach to design, aiming for simplicity and functionality.</span><span>I consider myself proficient in wireframing, prototyping, coding, colour theory, and design principles, and I am working on developing my skills in user research and motion graphics.
                 </p>
                 <a href="about.html" class="about_left-link">
