--- a/maynooth.html
+++ b/maynooth.html
@@ -120,7 +120,7 @@
             <a href="https://www.linkedin.com/in/andrei-avram-design/" target="_blank">
               <p>LINKEDIN</p>
             </a>
-            <a href="mailto:andrei.avm00@gmail.com?subject=Hello" target="_blank">
+            <a href="mailto:hello@andreiavram.design?subject=Hello" target="_blank">
               <p>SAY HELLO</p>
             </a>
           </div>
