--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero_header">
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
-            <p class="hero_body">My name is <span class="my-name">Andrei</span> and I am a designer based in Rotterdam, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <p class="hero_body">My name is <span class="my-name">Andrei</span> and I am a designer based in the Netherlands, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
             <a a href="mailto:hello@andreiavram.design" target="_blank">
                 <h2 class="hero-cta">get in touch</h2>
               </a>
