--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     <img src="/graphics/blue-triangle.png" alt="blue triangle shape" class="about-blue-triangle">
                   </div>
                   <p>
-                    <span>Currently I am living in Rotterdam, the Netherlands, and I am studying User Experience Design as a Bachelor of Science at <span class="university">The Hague University.</span></span>
+                    <span>Currently I am living in the Netherlands, and I am studying User Experience Design as a Bachelor of Science at <span class="university">The Hague University.</span></span>
                     <span>I am learning new and exciting things about design every day and I am looking for opportunities where I could practice my problem-solving skills, by helping you bridge the gap between business goals and human needs.</span>
                   </p>
                   <a a href="mailto:hello@andreiavram.design" target="_blank">
