--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero_header">
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
-            <p class="hero_body">My name is <span class="my-name">Andrei</span> and I am a designer based in the Netherlands, focusing on crafting beautiful digital experiences by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <p class="hero_body">I am a designer based in the Netherlands, crafting intuitive and delightful experiences. My ambition is to solve problems by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
             <a a href="mailto:hello@andreiavram.design" target="_blank">
                 <h2 class="hero-cta">get in touch</h2>
               </a>
@@ -59,6 +59,26 @@
             </ul>
           </div>
         </section>
+        <section class="about">
+            <div id="about-header">
+              <h1>About</h1>
+              <img src="/graphics/red-square.png" alt="red square" class="red-square">
+            </div>
+            <div class="about-wrapper">
+              <div class="about_left">
+                <p class="about_left-body"><span>I am a student at The Hague University, studying UX Design. I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
+              Inspired by the Bauhaus school, I have a modern approach to design, aiming for simplicity, functionality and emotional value.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimisation. </span><span>My passions are generative art, sound design, crate digging, graphic design and motion design.</span>
+                </p>
+                <a href="about.html" class="about_left-link">
+                  <h2>learn more</h2>
+                </a>
+              </div>
+              <div class="about_right">
+                <div class="about_right-image">
+                  <img src="/graphics/me-1.jpg">
+                </div>
+            </div>
+        </section>
         <section class="work">
           <div id="work-header">
             <h1>Work</h1>
@@ -67,94 +87,21 @@
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <a href="/bespoke.html"><img src="/graphics/bespoke-mockup.jpg" alt="" class="work_image" id="work_image-3"></a>
+                <img src="/graphics/studyportals.jpg" alt="" class="work_image" id="work_image-3"></>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-3">
                 <h2 class="work-wrapper_header">
-                  Bespoke Design
+                 Studyportals B.V.
                 </h2>
                    <h3 class="subtitle">
-                  research, ideation, design and prototyping
+                  UX Design Intern <br>July 2022 - January 2023
                 </h3>
                 <p class="work-wrapper_body" id="work_body-3">
-                  Conceptual project for university, in which we designed an application that should fulfill the needs of one user. The scope of this project was to learn how to empathize and build an experience that is crafted according to the user’s needs, context, personality and lifestyle.  
+                  <span>I helped with redesigning, prototyping, and testing different core features of www.mastersportal.com.</span><span>My main responsibilities were research, ideation, design, prototyping, testing, and validating designs before and after implementation.</span>
                 </p>
-                <a href="/bespoke.html"><button class="red">VIEW PROJECT</button></a>
-              </div>
-            </div>
-            <div class="work-wrapper">
-              <div class="work-wrapper_left">
-                <a href="/maynooth.html"><img src="/graphics/Mockup2.jpg" alt="" class="work_image" id="work_image-1"></a>
-              </div>
-              <div class="work-wrapper_right" id="work-wrapper_right-1">
-                <h2 class="work-wrapper_header">
-                  Maynooth Furniture
-                </h2>
-                <h3 class="subtitle">
-                  design and development
-                </h3>
-                <p class="work-wrapper_body" id="work_body-1">
-                  A personal project I have worked on while teaching myself design and development. It is a fictive furniture store built with a nordic feel, and the target audience would be middle class people who are interested in purchasing custom quality furniture pieces.
-                </p>
-                <a href="/maynooth.html"><button class="blue">VIEW PROJECT</button></a>
-              </div>
-            </div>
-            <div class="work-wrapper">
-              <div class="work-wrapper_left">
-                <a href="xdassignment.html"><img src="/graphics/xd-app-mockup.jpg" alt="" class="work_image" id="work_image-2"></a>
-              </div>
-              <div class="work-wrapper_right" id="work-wrapper_right-2">
-                <h2 class="work-wrapper_header">
-                 Interface Yourself
-                </h2>
-                   <h3 class="subtitle">
-                  design and prototyping
-                </h3>
-                <p class="work-wrapper_body" id="work_body-2">
-                  This is an application I built for university. The scope of this application was to introduce myself to my colleagues, and to give them a clear understanding of my personality, hobbies and vision. I used a more unconventional and artistic approach in order to practice my skills in design and prototyping.
-                </p>
-                <a href="/xdassignment.html"><button class="red">VIEW PROJECT</button></a>
-              </div>
-            </div>
-            <div class="work-wrapper">
-              <div class="work-wrapper_left">
-                <a href="/processing.html"><img src="/graphics/processing-thumbnail.jpg" alt="" class="work_image" id="work_image-4"></a>
-              </div>
-              <div class="work-wrapper_right" id="work-wrapper_right-4">
-                <h2 class="work-wrapper_header">
-                  Processing Generative Art
-                </h2>
-                <h3 class="subtitle">
-                  programming
-                </h3>
-                <p class="work-wrapper_body" id="work_body-4">
-                  In one of our university courses, we were thought how to program computers by using creative coding as a method of teaching. These generative art pieces are the result of my work after teaching myself processing for just a few days.
-                </p>
-                <a href="/processing.html"><button class="blue">VIEW PROJECT</button></a>
               </div>
             </div>
           </div>
-          </section>
-          <section class="about">
-            <div id="about-header">
-              <h1>About</h1>
-              <img src="/graphics/red-square.png" alt="red square" class="red-square">
-            </div>
-            <div class="about-wrapper">
-              <div class="about_left">
-                <p class="about_left-body"><span>Currently I am a student at The Hague University of Applied Sciences, studying User Experience Design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
-              Taking inspiration from the Bauhaus school and international typography, I have a modern approach to design, aiming for simplicity and functionality.</span><span>I consider myself proficient in wireframing, prototyping, coding, colour theory, user research and design principles, and I am working on developing my skills in motion graphics.
-                </p>
-                <a href="about.html" class="about_left-link">
-                  <h2>learn more</h2>
-                </a>
-              </div>
-            
-              <div class="about_right">
-                <div class="about_right-image">
-                  <img src="/graphics/me.jpg">
-                </div>
-            </div>
         </section>
       </main>
       </nav>
