--- a/about.html
+++ b/about.html
@@ -21,28 +21,28 @@
         </div>
         <nav class="navigation" id="navbar">
           <ul class="navigation_list">
-            <a class="navigation_link" href="/index.html#work-header">
-              <li class="navigation_list-item work-nav">work</li>
-            </a>
             <a class="navigation_link" href="/index.html#about-header">
               <li class="navigation_list-item about-nav">about</li>
+            </a>
+            <a class="navigation_link" href="/index.html#work-header">
+              <li class="navigation_list-item work-nav">work</li>
             </a>
           </ul>
         </nav>
       </header>
-        <div class="side-menu" id="side-menu">
+       <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-                 <a href="/index.html#about-header" class="side-menu_link">
-                    <li class="side-menu_item">about</li>
-                </a>
-                <a href="/index.html#work-header" class="side-menu_link">
-                    <li class="side-menu_item">work</li>
-                </a>
-                <a href="/index.html" class="side-menu_link">
-                    <li class="side-menu_item">home</li>
-                 </a>
+              <a href="#about-header" class="side-menu_link">
+                <li class="side-menu_item">about</li>
+              </a>
+              <a href="#work-header" class="side-menu_link">
+                <li class="side-menu_item">work</li>
+              </a>
+              <a href="#header" class="side-menu_link">
+                <li class="side-menu_item">home</li>
+              </a>
             </ul>
-        </div>
+          </div>
       </div>
       <main>
         <section class="about">
