--- a/about.html
+++ b/about.html
@@ -20,12 +20,12 @@
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
         <nav class="navigation" id="navbar">
-          <ul class="navigation_list">
-            <a class="navigation_link" href="/index.html#work-header">
-              <li class="navigation_list-item work-nav">work</li>
-            </a>
-            <a class="navigation_link" href="/index.html#about-header">
+         <ul class="navigation_list">
+            <a class="navigation_link" href="#about-header">
               <li class="navigation_list-item about-nav">about</li>
+            </a>
+            <a class="navigation_link" href="#work-header">
+              <li class="navigation_list-item work-nav">work</li>
             </a>
           </ul>
         </nav>
