--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
         </div>
         <nav class="navigation" id="navbar">
          <ul class="navigation_list">
-            <a class="navigation_link" href="#about-header">
+            <a class="navigation_link" href="/index#about-header">
               <li class="navigation_list-item about-nav">about</li>
             </a>
-            <a class="navigation_link" href="#work-header">
+            <a class="navigation_link" href="/index#work-header">
               <li class="navigation_list-item work-nav">work</li>
             </a>
           </ul>
