--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/studyportals.jpg" alt="" class="work_image" id="work_image-3"></>
+                <img src="/graphics/studyportals.webp" alt="" class="work_image" id="work_image-3"></>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-3">
                 <h2 class="work-wrapper_header">
