--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
               <div class="about_right">
                 <div class="about_right-image">
-                  <img src="/graphics/me-1.jpg">
+                  <img src="/graphics/me-1.jpg" alt="picture of myself">
                 </div>
             </div>
         </section>
@@ -87,7 +87,7 @@
           <div class="portfolio-wrapper">
             <div class="work-wrapper">
               <div class="work-wrapper_left">
-                <img src="/graphics/studyportals.webp" alt="" class="work_image" id="work_image-3"></>
+                <img src="/graphics/studyportals.webp" alt="studyportals-logo" class="work_image" id="work_image-3"></>
               </div>
               <div class="work-wrapper_right" id="work-wrapper_right-3">
                 <h2 class="work-wrapper_header">
