--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   UX Design Intern <br>July 2022 - January 2023
                 </h3>
                 <p class="work-wrapper_body" id="work_body-3">
-                  <span>I helped with redesigning, prototyping, and testing different core features of www.mastersportal.com.</span><span>My main responsibilities were research, ideation, design, prototyping, testing, and validating designs before, during or after implementation.</span>
+                  <span>I helped with redesigning, prototyping, and testing different core features of www.mastersportal.com.</span><span>My main responsibilities were research, ideation, design, prototyping, testing, and validating designs before, during and after implementation.</span>
                 </p>
               </div>
             </div>
