--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             </div>
             <div class="about-wrapper">
               <div class="about_left">
-                <p class="about_left-body"><span>I am a student at The Hague University, studying UX Design. I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>
-              Inspired by the Bauhaus school, I have a modern approach to design, aiming for simplicity, functionality and emotional value.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimisation. </span><span>My passions are generative art, sound design, collecting music, graphic design and motion design.</span>
+                <p class="about_left-body"><span>I am a student at The Hague University, studying UX Design, and I am interested in pursuing a career as a UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimization. </span><span>My passions are generative art, sound design, analog photography, music, graphic design, and motion design.</span>
                 </p>
                 <a href="about.html" class="about_left-link">
                   <h2>learn more</h2>
