--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="shortcut icon" type="icon" href="/graphics/favicon.ico" />
     <title>Andrei Avram | Portfolio</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VP1CYSCQ4D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VP1CYSCQ4D');
+</script>
   <body>
     <div class="container">
       <header class="header" id="header"> 
