--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="hero_header">
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
-            <p class="hero_body">I am a designer based in the Netherlands, crafting intuitive and delightful experiences. My ambition is to solve problems by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
+            <p class="hero_body">I am a designer based in the Netherlands, crafting intuitive and delightful experiences.<br> My ambition is to bridge the gap between business goals and user needs by combining interaction psychology with a pixel-perfect approach to aesthetics.</p>
             <a a href="mailto:hello@andreiavram.design" target="_blank">
                 <h2 class="hero-cta">get in touch</h2>
               </a>
