--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <h1 class="main-title" id="main-title"><span id="span-designer">designer</span><span>developer</span><span id="span-digital-artisan">digital artisan</span></h1>
             </div>
             <p class="hero_body">
-              <span>I am a designer based in the Netherlands, crafting intuitive, delightful, and meaningful experiences.</span>
+              <span>I am a designer based in the Netherlands, crafting intuitive and delightful experiences.</span>
               <span>By combining interaction psychology with a pixel-perfect approach to aesthetics, I strive to create designs that bridge the gap between business goals and user needs.</span>
             </p>
             <a a href="mailto:hello@andreiavram.design" target="_blank">
