--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="about-wrapper">
               <div class="about_left">
-                <p class="about_left-body"><span>I am a student at The Hague University, studying UX Design, and I am interested in pursuing a career as a UX designer, service designer or UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimization. </span><span>My passions are generative art, sound design, analog photography, music, graphic design, and motion design.</span>
+                <p class="about_left-body"><span>I am a student at The Hague University, studying UX Design, and I am interested in pursuing a career as a product designer, service designer or UX engineer, being responsible for research, ideation, design, development, and implementation.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimization. </span><span>My passions are generative art, sound design, analog photography, music, graphic design, and motion design.</span>
                 </p>
                 <a href="about.html" class="about_left-link">
                   <h2>learn more</h2>
