--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="about-wrapper">
               <div class="about_left">
-                <p class="about_left-body"><span>I am working on my degree in UX Design at The Hague University, and I am offering services in product design, service design, or UX engineering.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimization. </span><span>My passions are generative art, graphic design, analog photography, sound and motion design.</span>
+                <p class="about_left-body"><span>I am working on my degree in UX Design at The Hague University and offering services in product design, service design, or UX engineering.</span><span>I am proficient in research, ideation, design, prototyping, coding, and conversion rate optimization. </span><span>My passions are generative art, graphic design, analog photography, sound, and motion design.</span>
                 </p>
                 <a href="about.html" class="about_left-link">
                   <h2>learn more</h2>
