--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <header class="header" id="header"> 
-        <div class="logo">
+        <div class="logo">   
           <a href="#">
             <h2 class="name">
               andrei avram
@@ -105,7 +105,7 @@
                  Studyportals B.V.
                 </h2>
                    <h3 class="subtitle">
-                  UX Design Intern <br>July 2022 - January 2023
+                  UX Design <br>July 2022 - January 2023
                 </h3>
                 <p class="work-wrapper_body" id="work_body-3">
                   <span>I helped with redesigning, prototyping, and testing different core features of www.mastersportal.com.</span><span>My main responsibilities were research, ideation, design, prototyping, testing, and validating designs before, during and after implementation.</span>
@@ -125,6 +125,9 @@
           <div class="footer_right">
             <a href="https://www.linkedin.com/in/andrei-avram-design/" target="_blank">
               <p>LINKEDIN</p>
+            </a>
+            <a href="https://www.are.na/andrei-avram" target="_blank">
+              <p>ARE.NA</p>
             </a>
             <a href="mailto:hello@andreiavram.design" target="_blank">
               <p>SAY HELLO</p>
