--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
           </div>
       </div>
       <main>
-        <section class="about">
+        <section class="about-about">
             <div class="container">
               <div class="aboutpage_wrapper">
                 <div class="aboutpage_left">
@@ -66,15 +66,15 @@
                     <span>I was born and grew up in Romania in a small mountain town called <span class="busteni">Busteni</span>, and I always had an affinity for design, technology, and people. </span>
                     <span>After finishing school, I moved to <span class="bucharest">Bucharest</span>, the capital city of Romania, where I took different freelance jobs in the creative field. </span>
                     <span>Here is where I understood my intrinsic motivation to improve people's lives by building engaging and meaningful experiences. </span>
-                    <span>Soon I realized that all the skills and knowledge I have gained so far could be leveraged and I decided to move to the Netherlands to further strengthen my potential and pursue my passion for experience design.</span>
+                    <span>Soon I realized that all the skills and knowledge I gained so far could be leveraged and I decided to move to the Netherlands to strengthen my potential and pursue my passion for design.</span>
                   </p>
                   <div class="about-headerwrapper">
-                    <h2 class="about-header-2"style="margin-top:2em; margin-bottom: 0.25em;" >how it's going:</h2>
+                    <h2 class="about-header-2">how it's going:</h2>
                     <img src="/graphics/blue-triangle.png" alt="blue triangle shape" class="about-blue-triangle">
                   </div>
                   <p>
                     <span>Currently I am living in the Netherlands, and I am studying User Experience Design as a Bachelor of Science at <span class="university">The Hague University.</span></span>
-                    <span>I am learning new and exciting things about design every day and I am looking for opportunities where I could practice my problem-solving skills, by helping you bridge the gap between business goals and human needs.</span>
+                    <span>I am learning exciting things about design every day and I am looking for opportunities where I could practice my problem-solving skills, by helping you bridge the gap between business goals and human needs.</span>
                   </p>
                   <a a href="mailto:hello@andreiavram.design" target="_blank">
                     <h2 class="get-in-touch">get in touch</h2>
@@ -99,6 +99,9 @@
           <div class="footer_right">
             <a href="https://www.linkedin.com/in/andrei-avram-design/" target="_blank">
               <p>LINKEDIN</p>
+            </a>
+             <a href="https://www.are.na/andrei-avram" target="_blank">
+              <p>ARE.NA</p>
             </a>
             <a href="mailto:hello@andreiavram.design" target="_blank">
               <p>SAY HELLO</p>
