--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <a class="navigation_link" href="#about-header">
               <li class="navigation_list-item about-nav">about</li>
             </a>
-            <a class="navigation_link" href="#work-header">
+<!--             <a class="navigation_link" href="#work-header">
               <li class="navigation_list-item work-nav">work</li>
-            </a>
+            </a> -->
           </ul>
         </nav>
       </header>
@@ -59,8 +59,8 @@
           </div>
            <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-              <a href="#work-header" class="side-menu_link">
-                <li class="side-menu_item">work</li>
+<!--               <a href="#work-header" class="side-menu_link">
+                <li class="side-menu_item">work</li> -->
               </a>
                <a href="#about-header" class="side-menu_link">
                 <li class="side-menu_item">about</li>
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-        <section class="work">
+<!--         <section class="work">
           <div id="work-header">
             <h1>Work</h1>
             <img src="/graphics/yellow-triangle.png" alt="yellow-triangle" class="yellow-triangle">
@@ -113,7 +113,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </main>
       </nav>
     </div>
