--- a/about.html
+++ b/about.html
@@ -33,16 +33,16 @@
             <a class="navigation_link" href="/index#about-header">
               <li class="navigation_list-item about-nav">about</li>
             </a>
-            <a class="navigation_link" href="/index#work-header">
+<!--             <a class="navigation_link" href="/index#work-header">
               <li class="navigation_list-item work-nav">work</li>
-            </a>
+            </a> -->
           </ul>
         </nav>
       </header>
           <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-              <a href="index.html#work-header" class="side-menu_link">
-                <li class="side-menu_item">work</li>
+<!--               <a href="index.html#work-header" class="side-menu_link">
+                <li class="side-menu_item">work</li> -->
               </a>
                <a href="index.html#about-header" class="side-menu_link">
                 <li class="side-menu_item">about</li>
