--- a/about.html
+++ b/about.html
@@ -28,21 +28,21 @@
           </a>
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
-        <nav class="navigation" id="navbar">
+<!--         <nav class="navigation" id="navbar">
          <ul class="navigation_list">
             <a class="navigation_link" href="/index#about-header">
               <li class="navigation_list-item about-nav">about</li>
             </a>
-<!--             <a class="navigation_link" href="/index#work-header">
+            <a class="navigation_link" href="/index#work-header">
               <li class="navigation_list-item work-nav">work</li>
-            </a> -->
+            </a>
           </ul>
-        </nav>
+        </nav> -->
       </header>
-          <div class="side-menu" id="side-menu">
+<!--           <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-<!--               <a href="index.html#work-header" class="side-menu_link">
-                <li class="side-menu_item">work</li> -->
+              <a href="index.html#work-header" class="side-menu_link">
+                <li class="side-menu_item">work</li>
               </a>
                <a href="index.html#about-header" class="side-menu_link">
                 <li class="side-menu_item">about</li>
@@ -51,7 +51,7 @@
                 <li class="side-menu_item">home</li>
               </a>
             </ul>
-          </div>
+          </div> -->
       </div>
       <main>
         <section class="about-about">
