--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           </a>
           <img src="/graphics/yellow-semi.png" alt="yellow semi-circle" class="semi" id="semi">
         </div>
-        <nav class="navigation" id="navbar">
+<!--         <nav class="navigation" id="navbar">
           <ul class="navigation_list">
             <a class="navigation_link" href="#about-header">
               <li class="navigation_list-item about-nav">about</li>
             </a>
-<!--             <a class="navigation_link" href="#work-header">
+            <a class="navigation_link" href="#work-header">
               <li class="navigation_list-item work-nav">work</li>
-            </a> -->
+            </a>
           </ul>
-        </nav>
+        </nav> -->
       </header>
       <main>
         <section class="hero">
@@ -57,10 +57,10 @@
             <img src="/graphics/abstract-render.png" alt="abstract-shapes" class="abstract-shapes" id="abstract-shapes">
             <img src="/graphics/yellow-rect.png" alt="yellow-rectangle" class="yellow-rect" id="yellow-rect">
           </div>
-           <div class="side-menu" id="side-menu">
+<!--            <div class="side-menu" id="side-menu">
             <ul class="side-menu_list">
-<!--               <a href="#work-header" class="side-menu_link">
-                <li class="side-menu_item">work</li> -->
+              <a href="#work-header" class="side-menu_link">
+                <li class="side-menu_item">work</li>
               </a>
                <a href="#about-header" class="side-menu_link">
                 <li class="side-menu_item">about</li>
@@ -69,7 +69,7 @@
                 <li class="side-menu_item">home</li>
               </a>
             </ul>
-          </div>
+          </div> -->
         </section>
         <section class="about">
             <div id="about-header">
