--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <p class="hero_body">
               <span>I am a designer based in the Netherlands, crafting intuitive and delightful experiences.</span>
-              <span>By combining interaction psychology with a pixel-perfect approach to aesthetics, I strive to create designs that bridge the gap between business goals and user needs.</span>
+              <span>By combining interaction psychology with a pixel-perfect approach to aesthetics, I create designs that bridge the gap between business goals and user needs.</span>
             </p>
             <a a href="mailto:hello@andreiavram.design" target="_blank">
                 <h2 class="hero-cta">get in touch</h2>
